Fix overflowing text in IE10

--- a/src/styles/layout/panel.less
+++ b/src/styles/layout/panel.less
@@ -77,6 +77,12 @@
     }
   }
 
+  .panel-content {
+
+    max-width: 100%;
+
+  }
+
   &.clickable:hover {
     background-color: color-lighten(@panel-background-color, 5);
   }
